--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@sentry/nextjs": "^8.9.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "easymde": "^2.18.0",
     "lucide-react": "^0.394.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "react-simplemde-editor": "^5.2.0",
     "recharts": "^2.12.7",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
