--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-hook-form": "^7.51.5",
     "react-markdown": "^9.0.1",
     "react-simplemde-editor": "^5.2.0",
-    "recharts": "^2.12.7",
+    "recharts": "^2.13.0-alpha.4",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
