--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sentry/nextjs": "^8.9.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "easymde": "^2.18.0",
     "lucide-react": "^0.394.0",
     "next": "14.2.3",
